--- a/6998 Updated UI/signup_confirm.html
+++ b/6998 Updated UI/signup_confirm.html
@@ -1,61 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
-    <title>Amplify Auth Flow</title>
-</head>
+    <link rel="icon" href="data:,"> 
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Jost:wght@300;700&display=swap" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script> 
+  </head>
 
 <body>
-    <!-- Navbar -->
-    <ul class="nav justify-content-end bg-light">
-        <li class="nav-item">
-            <a class="nav-link" href="./index.html">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="./signup.html">Sign up</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="./login.html">Login</a>
-        </li>
-        <li class="nav-item">
-            <a id="nav-logout" class="nav-link" href="./index.html">Logout</a>
-        </li>
-    </ul>
-
-    <!-- Main Content -->
-    <section id="auth-signup-confirm">
-        <div class="d-flex justify-content-center min-vh-100">
-            <div class="align-self-center">
-                <h2>Confirm Email Address</h2>
-                <form id="form-auth-signup-confirm">
-                    <div class="mb-3">
-                        <label for="formSignUpConfirmEmail" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="formSignUpConfirmEmail" aria-describedby="emailHelp" value="" readonly> 
-                    </div>
-                    <div class="mb-3">
-                        <label for="formSignUpConfirmCode" class="form-label">Confirmation Code</label>
-                        <input type="text" class="form-control" id="formSignUpConfirmCode">
-                    </div>                    
-                    <button id="btnConfirm" type="submit" class="btn btn-primary">Confirm</button>                  
-                </form>
-                <p class="mt-3">
-                <small>
-                    Didn't get your code? 
-                    <a id="btnResend" class="text-decoration-none" href="#">Resend</a>
-                </small>
-            </p>
+    <div id="header">
+        <img id="logo" src="/img/logo.png" alt="logo" />
+        <button id="loginBtn">LOGIN</button>
+    </div>
+    <div id="home-info">
+        <p id="home-title">Invest smarter, not harder</p>
+        <p id="home-description">Access a wealth of data and analysis to identify the best investment opportunities for you,
+            based on your goals and risk tolerance. Build a profitable portfolio with confidence,
+            no matter your level of experience.</p>
+    </div>
+    <div class="overlay-other">
+        <section id="auth-signup-confirm">
+            <div id="signup-confirm-container" class="d-flex justify-content-center">
+                <div class="align-self-center">
+                    <img id="authenticate-logo" src="/img/logo-dark.png" alt="logo" />
+                    <form id="form-auth-signup-confirm">
+                        <div class="mb-3">
+                            <label for="formSignUpConfirmEmail" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="formSignUpConfirmEmail" aria-describedby="emailHelp" value="" readonly> 
+                        </div>
+                        <div class="mb-3">
+                            <label for="formSignUpConfirmCode" class="form-label">Confirmation Code</label>
+                            <input type="text" class="form-control" id="formSignUpConfirmCode">
+                        </div>                    
+                        <button id="btnConfirm" type="submit" class="authenticate-btn btn btn-primary">Confirm</button>                  
+                    </form>
+                    <p class="mt-3 authenticate-options">
+                        Didn't get your code? 
+                        <button id="btnResend">Resend</button>
+                    </p>
+                </div>
             </div>
-        </div>
-    </section>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
-    </script>
+        </section>
+    </div>
     <script src="main.bundle.js"></script>
 </body>
 
