--- a/6998 Updated UI/search_results.html
+++ b/6998 Updated UI/search_results.html
@@ -15,24 +15,34 @@
 
   <body>
     <div id="header">
-      <img id="logo" src="/img/logo.png" alt="logo" />
+      <img id="logo-after" src="/img/logo-background.png" alt="logo" />
+      <a class="menu-item" href="./favorite.html">Favorites</a>
       <button id="nav-logout">LOGOUT</button>
     </div>
-    <div id="home-info">
-        <p id="home-title">Invest smarter, not harder</p>
-        <form id="search" autocomplete="off" method="GET">
-          <input id="search-bar" type="search" placeholder="  Enter an address, neighborhood, city, or ZIP code">
-        </form>
-    </div>
       
-    <section id="authenticated-content">
-        <div class="d-flex justify-content-center">
-          <div class="align-self-center">
+    <div id="search-container" class="container-flow">
+      <div class="row">
+        <div class="search-col col-md-4">
+          <div class="search-card">
+            <img src="/img/house-1.png">
           </div>
         </div>
+        <div class="search-col col-md-4">
+          <img src="/img/house-2.png">
+        </div>
+        <div class="search-col col-md-4">
+          <img src="/img/house-3.png">
+        </div>
+      </div>
+    </div>
+
+    <section id="authenticated-content">
+        <div class="d-flex justify-content-center">
+          <div class="align-self-center"></div>
+        </div>
     </section>
-    <input id="chatbot" type="image" src="/img/chatbot.png" />
-    <script src="./src/home.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/search.css" />
+    <script src="./src/search.js"></script>
     <script src="main.bundle.js"></script>
 </body>
 
