Finished remaining search results

--- a/6998 Updated UI/search_results.html
+++ b/6998 Updated UI/search_results.html
@@ -20,20 +20,17 @@
       <button id="nav-logout">LOGOUT</button>
     </div>
       
-    <div id="search-container" class="container-flow">
+    <div id="search-container">
       <div class="row">
-        <div class="search-col col-md-4">
-          <div class="search-card">
-            <img src="/img/house-1.png">
-          </div>
+        <div class="col-md-9">
+          <h2 id="search-title"></h2>
         </div>
-        <div class="search-col col-md-4">
-          <img src="/img/house-2.png">
-        </div>
-        <div class="search-col col-md-4">
-          <img src="/img/house-3.png">
+        <div id="sort" class="col-md-3">
+          <img src="./img/sort.png">
+          <button id="sort-btn">Sort: Estimated Price</button>
         </div>
       </div>
+      <div id="search-houses"></div>
     </div>
 
     <section id="authenticated-content">
