Fixed search results grid bug

--- a/6998 Updated UI/search_results.html
+++ b/6998 Updated UI/search_results.html
@@ -19,8 +19,8 @@
       <a class="menu-item" href="./favorite.html">Favorites</a>
       <button id="nav-logout">LOGOUT</button>
     </div>
-      
-    <div id="search-container">
+    
+    <div id="search-menu" class="container-fluid">
       <div class="row">
         <div class="col-md-9">
           <h2 id="search-title"></h2>
@@ -30,6 +30,9 @@
           <button id="sort-btn">Sort: Estimated Price</button>
         </div>
       </div>
+    </div>
+
+    <div id="search-container" class="container-fluid">
       <div id="search-houses"></div>
     </div>
 
