Implemented house detail gallery

--- a/6998 Updated UI/house.html
+++ b/6998 Updated UI/house.html
@@ -23,21 +23,24 @@
     <div id="house-detail-container" class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <img id="house-detail-img" src="./img/house-3.png"><br>
-                <!-- <div class="row">
-                    <div class="col-md-3">
-                        <img src="./img/house-3-1.png">
+                <div class="row">
+                    <div class="container">
+                        <img id="house-detail-img" src="./img/house-3.png">
                     </div>
-                    <div class="col-md-3">
-                        <img src="./img/house-3-2.png">
+
+                    <div class="subimg-col">
+                      <img class="house-detail-subimg" src="./img/house-3-1.png" onclick="change_house_img(this);">
                     </div>
-                    <div class="col-md-3">
-                        <img src="./img/house-3-3.png">
+                    <div class="subimg-col">
+                      <img class="house-detail-subimg" src="./img/house-3-2.png" onclick="change_house_img(this);">
                     </div>
-                    <div class="col-md-3">
-                        <img src="./img/house-3-4.png">
+                    <div class="subimg-col">
+                      <img class="house-detail-subimg" src="./img/house-3-3.png" onclick="change_house_img(this);">
                     </div>
-                </div> -->
+                    <div class="subimg-col">
+                      <img class="house-detail-subimg" src="./img/house-3-4.png" onclick="change_house_img(this);">
+                    </div>
+                  </div>
             </div>
             <div class="col-md-6">
                 <div class="row">
