Finished implementing house detail template

--- a/6998 Updated UI/house.html
+++ b/6998 Updated UI/house.html
@@ -22,6 +22,7 @@
 
     <div id="house-detail-container" class="container-fluid">
         <div class="row">
+            <!-- house image gallery -->
             <div class="col-md-6">
                 <div class="row">
                     <div class="container">
@@ -42,19 +43,50 @@
                     </div>
                   </div>
             </div>
+            <!-- house information overview -->
             <div class="col-md-6">
                 <div class="row">
                     <div class="col-md-9">
                         <h2><b>$489,900</b></h2>
                     </div>
                     <div class="col-md-3 text-left">
-                        <input class="house-fav" type="image" src="./img/like.png"/>
+                        <input class="house-fav" id="fav-3" type="image" src="./img/like.png"/>
                     </div>
                 </div>
                 <div id="house-upper-info">
                     <p>4 units</p>
                     <p>512 East 11th Street, 5D, NYC, NY 10075</p>
-                </div>
+                </div><br>
+                <div id="house-overview">Overview</div><br><br>
+                <p>Endless potential and tremendous value can be found in this charming and spacious five-room maisonette with all of the services of a white-glove doorman cooperative in the heart of Carnegie Hill.
+                    The space was previously a medical office within a residential apartment but can easily be converted into a beautiful two-bedroom, two-bath townhouse-style residence.
+                    It may also be used as "live/ work or professional space for medical-related professions.</p>
+                <table style="width:100%">
+                    <tr>
+                        <th>Year Built</th>
+                        <td>1900</td>
+                    </tr>
+                    <tr>
+                        <th>Borough</th>
+                        <td>Manhattan</td>
+                    </tr>
+                    <tr>
+                        <th>Neighborhood</th>
+                        <td>Alphabet City</td>
+                    </tr>
+                    <tr>
+                        <th>Building Class</th>
+                        <td>One Family Dwellings</td>
+                    </tr>
+                    <tr>
+                        <th>Lot</th>
+                        <td>46/td>
+                    </tr>
+                    <tr>
+                        <th>Land Square Feet</th>
+                        <td>2,116 sq ft</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
