Deleted old files and added annotations

--- a/frontend/compare.html
+++ b/frontend/compare.html
@@ -17,7 +17,7 @@
     <div id="header">
       <img id="logo-after" src="/img/logo-background.png" alt="logo" />
       <a class="menu-item" href="./favorite.html">Favorites</a>
-      <button id="nav-logout">LOGOUT</button>
+      <button id="logout-btn">LOGOUT</button>
     </div>
     
     <h2 id="compare-title">Compare</h2>
