--- a/frontend/forgot.html
+++ b/frontend/forgot.html
@@ -25,6 +25,7 @@
             no matter your level of experience.</p>
     </div>
     <div class="overlay-other">
+        <!-- forgot password -->
         <section id="auth-forgot-password">
             <div id="forgot-container" class="d-flex justify-content-center">
                 <div class="align-self-center">
