--- a/frontend/home.html
+++ b/frontend/home.html
@@ -16,7 +16,7 @@
   <body>
     <div id="header">
       <img id="logo" src="/img/logo.png" alt="logo" />
-      <button id="nav-logout">LOGOUT</button>
+      <button id="logout-btn">LOGOUT</button>
     </div>
     <div id="home-info">
         <p id="home-title">Invest smarter, not harder</p>
