--- a/frontend/forgot_confirm.html
+++ b/frontend/forgot_confirm.html
@@ -25,6 +25,7 @@
             no matter your level of experience.</p>
     </div>
     <div class="overlay-other">
+        <!-- validate to create new password -->
         <section id="auth-forgot-password-confirm">
             <div id="forgot-confirm-container" class="d-flex justify-content-center">
                 <div class="align-self-center">
