--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
     </div>
     <div id="overlay">
 
-        <!-- login in -->
+        <!-- login-->
         <section id="auth-login"> 
             <div id="login-container" class="d-flex justify-content-center">
                 <div class="align-self-center">
@@ -34,14 +34,14 @@
                     <p class="error-msg">Login failed. Please try again.</p>
                     <form id="form-auth-login">
                         <div class="mb-3">
-                            <label for="formLoginEmail" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="formLoginEmail" aria-describedby="emailHelp">                        
+                            <label for="login-email" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp">                        
                         </div>
                         <div class="mb-3">
-                            <label for="formLoginPassword" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="formLoginPassword">
+                            <label for="login-password" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="login-password">
                         </div>                    
-                        <button id="btnLogin" type="submit" class="authenticate-btn btn btn-primary">Login</button>                    
+                        <button id="login-btn" type="submit" class="authenticate-btn btn btn-primary">Login</button>                    
                     </form>
                     <p class="mt-3 mb-0 authenticate-options">
                         Don't have an account?
@@ -70,7 +70,7 @@
                             <label for="formSignUpPassword" class="form-label">Password</label>
                             <input type="password" class="form-control" id="formSignUpPassword">
                         </div>                    
-                        <button id="btnSignUp" type="submit" class="authenticate-btn btn btn-primary">Sign Up</button>
+                        <button id="sign-up-btn" type="submit" class="authenticate-btn btn btn-primary">Sign Up</button>
                     </form>
                     <p class="mt-3 authenticate-options">
                         Already have an account?
