--- a/frontend/search_results.html
+++ b/frontend/search_results.html
@@ -17,7 +17,7 @@
     <div id="header">
       <img id="logo-after" src="/img/logo-background.png" alt="logo" />
       <a class="menu-item" href="./favorite.html">Favorites</a>
-      <button id="nav-logout">LOGOUT</button>
+      <button id="logout-btn">LOGOUT</button>
     </div>
     
     <div id="search-menu" class="container-fluid">
@@ -32,6 +32,7 @@
       </div>
     </div>
 
+    <!-- container for all search results -->
     <div id="search-container" class="container-fluid">
       <div id="search-houses"></div>
     </div>
@@ -41,9 +42,9 @@
           <div class="align-self-center"></div>
         </div>
     </section>
+    
     <link rel="stylesheet" type="text/css" href="./css/search.css" />
     <script src="./src/search.js"></script>
     <script src="main.bundle.js"></script>
-</body>
-
+  </body>
 </html>
