--- a/frontend/signup_confirm.html
+++ b/frontend/signup_confirm.html
@@ -25,20 +25,23 @@
             no matter your level of experience.</p>
     </div>
     <div class="overlay-other">
+
+        <!-- validate email -->
         <section id="auth-signup-confirm">
             <div id="signup-confirm-container" class="d-flex justify-content-center">
                 <div class="align-self-center">
                     <img id="authenticate-logo" src="/img/logo-dark.png" alt="logo" />
+                    <p class="good-msg">Confirmation code resent.</p>
                     <form id="form-auth-signup-confirm">
                         <div class="mb-3">
-                            <label for="formSignUpConfirmEmail" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="formSignUpConfirmEmail" aria-describedby="emailHelp" value="" readonly> 
+                            <label for="signup-confirm-email" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="signup-confirm-email" aria-describedby="emailHelp" value="" readonly> 
                         </div>
                         <div class="mb-3">
-                            <label for="formSignUpConfirmCode" class="form-label">Confirmation Code</label>
-                            <input type="text" class="form-control" id="formSignUpConfirmCode">
+                            <label for="signup-confirm-code" class="form-label">Confirmation Code</label>
+                            <input type="text" class="form-control" id="signup-confirm-code">
                         </div>                    
-                        <button id="btnConfirm" type="submit" class="authenticate-btn btn btn-primary">Confirm</button>                  
+                        <button id="confirm-btn" type="submit" class="authenticate-btn btn btn-primary">Confirm</button>                  
                     </form>
                     <p class="mt-3 authenticate-options">
                         Didn't get your code? 
