Implemented compare house

--- a/frontend/compare.html
+++ b/frontend/compare.html
@@ -22,43 +22,7 @@
     
     <h2 id="compare-title">Compare</h2>
 
-    <table id="compare-table">
-        <tr>
-            <th></th>
-            <td><a href="/house.html#1"><img class="compare-img" src="./img/house-1.png"></a></td>
-            <td><a href="/house.html#2"><img class="compare-img" src="./img/house-2.png"></a></td>
-        </tr>
-        <tr>
-            <th>List Price</th>
-            <td>$275,000</td>
-            <td>$275,000</td>
-        </tr>
-        <tr>
-            <th>Estimate</th>
-            <td>$250,500</td>
-            <td>$300,000</td>
-        </tr>
-        <tr>
-            <th>Land Size</th>
-            <td>1,164</td>
-            <td>2,112</td>
-        </tr>
-        <tr>
-            <th>Year Built</th>
-            <td>1900</td>
-            <td>1950</td>
-        </tr>
-        <tr>
-            <th>Price/sq ft</th>
-            <td>$236.25</td>
-            <td>$130.21</td>
-        </tr>
-        <tr>
-            <th>Total Units</th>
-            <td>1</td>
-            <td>1</td>
-        </tr>
-    </table>
+    <table id="compare-table"></table>
 
     <section id="authenticated-content">
         <div class="d-flex justify-content-center">
