fixed minor bug for sort direction displayed in text on screen

--- a/frontend/search_results.html
+++ b/frontend/search_results.html
@@ -83,7 +83,7 @@
       $(document).ready(function() {
         const urlParams = new URLSearchParams(window.location.search);
         let currentSortValue = urlParams.get('sort_field');
-        let currentSortDirection = urlParams.get('sort_direction');
+        let currentSortDirection = urlParams.get('direction');
         console.log(currentSortValue)
 
         // Set the initial button text and direction data
